--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(conduit VERSION 0.1.0)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-include(CTest)
-enable_testing()
-
-message("${CMAKE_CXX_COMPILER_ID}")
+add_compile_options("-std=c++20")
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" )
   add_compile_options("-fcoroutines")
@@ -15,14 +9,6 @@ endif()
 
 include_directories(include)
 
-set(THREADS_PREFER_PTHREAD_FLAG ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-find_package(Threads REQUIRED)
 
 add_executable(conduit main.cpp)
-
-target_link_libraries(conduit PRIVATE Threads::Threads)
-
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-include(CPack)
