--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Configure Build Environment
+      shell: bash
+      run: sudo apt install g++-10
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
