--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,12 +14,14 @@ jobs:
     # See: https://docs.github.com/en/actions/configuring-and-managing-workflows/configuring-a-workflow#configuring-a-build-matrix
     runs-on: ubuntu-latest
 
+    compilers: [g++-10, clang++]
+
     steps:
     - uses: actions/checkout@v2
     
     - name: Configure Build Environment
       shell: bash
-      run: sudo apt install g++-10
+      run: sudo apt install g++-10 && sudo apt install clang-10
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
@@ -34,7 +36,7 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_CXX_COMPILER=g++-10
+      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_CXX_COMPILER=${{ compilers }}
 
     - name: Build
       working-directory: ${{runner.workspace}}/build
