--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,23 +4,40 @@ on: [push]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: [Debug, Release]
-  COMPILERS: [g++-10, clang++]
+  BUILD_TYPE: Release
 
 jobs:
   build:
+    name: ${{ matrix.name }}
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/actions/configuring-and-managing-workflows/configuring-a-workflow#configuring-a-build-matrix
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        name: [
+          ubuntu-latest-gcc-10,
+          ubuntu-latest-clang-10
+        ]
+
+        include:
+          - name: ubuntu-latest-gcc-10
+            compiler: g++-10
+            package: g++-10
+        
+        include:
+          - name: ubuntu-latest-clang-10
+            compiler: clang++
+            package: clang-10
+
     steps:
     - uses: actions/checkout@v2
     
     - name: Configure Build Environment
       shell: bash
-      run: sudo apt install g++-10 && sudo apt install clang-10
+      run: sudo apt install ${{ matrix.package }}
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
@@ -35,7 +52,7 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=${{ BUILD_TYPE }} -DCMAKE_CXX_COMPILER=${{ COMPILERS }}
+      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_CXX_COMPILER=${{ matrix.compiler }}
 
     - name: Build
       working-directory: ${{runner.workspace}}/build
