--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,18 +25,18 @@ jobs:
         include:
           - name: ubuntu-latest-gcc-10
             compiler: g++-10
-            package: sudo apt install g++-10
+            install-compiler: sudo apt install g++-10
         
           - name: ubuntu-latest-clang-10
             compiler: clang++-10
-            package: sudo apt install g++-10 && sudo apt install clang-10
+            install-compiler: sudo apt install g++-10 && sudo apt install clang-10
 
     steps:
     - uses: actions/checkout@v2
     
     - name: Configure Build Environment
       shell: bash
-      run: sudo apt install ${{ matrix.package }}
+      run: ${{ install-compiler }}
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
