--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,7 +36,7 @@ jobs:
     
     - name: Configure Build Environment
       shell: bash
-      run: ${{ install-compiler }}
+      run: ${{ matrix.install-compiler }}
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
