--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,17 +18,31 @@ jobs:
     strategy:
       matrix:
         name: [
-          ubuntu-latest-gcc-10,
-          ubuntu-latest-clang-10
+          ubuntu-latest-gcc-10-debug,
+          ubuntu-latest-clang-10-debug,
+          ubuntu-latest-gcc-10-release,
+          ubuntu-latest-clang-10-release
         ]
 
         include:
-          - name: ubuntu-latest-gcc-10
+          - name: ubuntu-latest-gcc-10-debug
             compiler: g++-10
+            build_type: Debug
             install-compiler: sudo apt install g++-10
         
-          - name: ubuntu-latest-clang-10
+          - name: ubuntu-latest-clang-10-debug
             compiler: clang++-10
+            build_type: Debug
+            install-compiler: sudo apt install g++-10 && sudo apt install clang-10
+
+          - name: ubuntu-latest-gcc-10-release
+            compiler: g++-10
+            build_type: Release
+            install-compiler: sudo apt install g++-10
+        
+          - name: ubuntu-latest-clang-10-release
+            compiler: clang++-10
+            build_type: Release
             install-compiler: sudo apt install g++-10 && sudo apt install clang-10
 
     steps:
@@ -51,17 +65,17 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_CXX_COMPILER=${{ matrix.compiler }}
+      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_CXX_COMPILER=${{ matrix.compiler }}
 
     - name: Build
       working-directory: ${{runner.workspace}}/build
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: cmake --build . --config $BUILD_TYPE
+      run: cmake --build . --config ${{ matrix.build_type }}
 
     - name: Test
       working-directory: ${{runner.workspace}}/build
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C $BUILD_TYPE
+      run: ctest -C ${{ matrix.build_type }}
