Added test for libc++

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,34 +16,57 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         name: [
           ubuntu-latest-gcc-10-debug,
           ubuntu-latest-clang-10-debug,
           ubuntu-latest-gcc-10-release,
-          ubuntu-latest-clang-10-release
+          ubuntu-latest-clang-10-release,
+          ubuntu-latest-clang-10-debug-libc++,
+          ubuntu-latest-clang-10-release-libc++
         ]
 
         include:
           - name: ubuntu-latest-gcc-10-debug
             compiler: g++-10
+            flags: ""
             build_type: Debug
             install-compiler: sudo apt install g++-10
         
           - name: ubuntu-latest-clang-10-debug
             compiler: clang++-10
+            flags: ""
             build_type: Debug
             install-compiler: sudo apt install g++-10 && sudo apt install clang-10
 
           - name: ubuntu-latest-gcc-10-release
             compiler: g++-10
+            flags: ""
             build_type: Release
             install-compiler: sudo apt install g++-10
         
           - name: ubuntu-latest-clang-10-release
             compiler: clang++-10
+            flags: ""
             build_type: Release
             install-compiler: sudo apt install g++-10 && sudo apt install clang-10
+
+          - name: ubuntu-latest-clang-10-debug-libc++
+            compiler: $HOME/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04/bin/clang++
+            flags: "-stdlib=libc++"
+            build_type: Debug
+            install-compiler: "cd $HOME \
+              && wget https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz \
+              && tar -xvf clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz"
+
+          - name: ubuntu-latest-clang-10-release-libc++
+            compiler: $HOME/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04/bin/clang++
+            flags: "-stdlib=libc++"
+            build_type: Release
+            install-compiler: "cd $HOME \
+              && wget https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz \
+              && tar -xvf clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz"
 
     steps:
     - uses: actions/checkout@v2
@@ -56,7 +79,7 @@ jobs:
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
       run: cmake -E make_directory ${{runner.workspace}}/build
-
+      
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
       # access regardless of the host operating system
@@ -65,7 +88,7 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_CXX_COMPILER=${{ matrix.compiler }}
+      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DCMAKE_CXX_FLAGS=${{ matrix.flags }}
 
     - name: Build
       working-directory: ${{runner.workspace}}/build
