--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -74,17 +74,17 @@ jobs:
               && wget https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz \
               && tar -xvf clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz"
 
-          - name: windows-2019-cl-debug
+          - name: windows-2019-clang-debug
             os: windows-2019
-            compiler: cl
-            flags: "/std:c++latest"
+            compiler: clang++
+            flags: "-stdlib=libc++"
             build_type: Debug
             install-compiler: "echo [Assuming cl exists]"
 
-          - name: windows-2019-cl-release
+          - name: windows-2019-clang-release
             os: windows-2019
-            compiler: cl
-            flags: "/std:c++latest"
+            compiler: clang++
+            flags: "-stdlib=libc++"
             build_type: Release
             install-compiler: "echo [Assuming cl exists]"
     steps:
