Fixed + Cleaned CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,43 +1,34 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(conduit VERSION 0.3.0 LANGUAGES CXX)
 
+add_library(conduit INTERFACE)
+
 option(CONDUIT_Install "Install CMake targets during install step." ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC" )
-    add_compile_options("/std:c++latest" "/await" "/EHsc")
+    target_compile_options(conduit INTERFACE "/std:c++latest" "/await" "/EHsc")
 endif()
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" )
-    add_compile_options("-std=c++20")
+    target_Compile_options(conduit INTERFACE "-std=c++20")
 endif()
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" )
-    add_compile_options("-std=c++20" "-fcoroutines")
+    target_compile_options(conduit INTERFACE "-std=c++20" "-fcoroutines")
 endif()
 
-include_directories(include)
-
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-set(CONDUIT_TARGET_NAME ${PROJECT_NAME})
-set(CONDUIT_INCLUDE_BUILD_DIR "${PROJECT_SOURCE_DIR}/include/")
-
-add_library(${CONDUIT_TARGET_NAME} INTERFACE)
- 
-target_compile_definitions(
-    ${CONDUIT_TARGET_NAME}
-    INTERFACE
-)
+target_compile_definitions(conduit INTERFACE)
 
 target_include_directories(
-    ${CONDUIT_TARGET_NAME}
+    conduit
     INTERFACE
-    $<BUILD_INTERFACE:${CONDUIT_INCLUDE_BUILD_DIR}>
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include/>
     $<INSTALL_INTERFACE:include>
 )
 
 install(
-    DIRECTORY ${CONDUIT_INCLUDE_BUILD_DIR}
+    DIRECTORY ${PROJECT_SOURCE_DIR}/include/
     DESTINATION include
 )
 
@@ -49,6 +40,7 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
     add_executable(run_tests tests/tests.cpp)
     set(THREADS_PREFER_PTHREAD_FLAG ON)
     find_package(Threads REQUIRED)
+    target_link_libraries(run_tests PRIVATE conduit)
     target_link_libraries(run_tests PRIVATE Threads::Threads)
 
     foreach(X IN ITEMS 
