--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,7 +24,8 @@ jobs:
           ubuntu-latest-gcc-10-release,
           ubuntu-latest-clang-10-release,
           ubuntu-latest-clang-10-debug-libc++,
-          ubuntu-latest-clang-10-release-libc++
+          ubuntu-latest-clang-10-release-libc++,
+          windows-2019-cl-debug
         ]
 
         include:
@@ -33,35 +34,35 @@ jobs:
             compiler: g++-10
             flags: ""
             build_type: Debug
-            install-compiler: sudo apt install g++-10
+            install_compiler: sudo apt install g++-10
         
           - name: ubuntu-latest-clang-10-debug
             os: ubuntu-latest
             compiler: clang++-10
             flags: ""
             build_type: Debug
-            install-compiler: sudo apt install g++-10 && sudo apt install clang-10
+            install_compiler: sudo apt install g++-10 && sudo apt install clang-10
 
           - name: ubuntu-latest-gcc-10-release
             os: ubuntu-latest
             compiler: g++-10
             flags: ""
             build_type: Release
-            install-compiler: sudo apt install g++-10
+            install_compiler: sudo apt install g++-10
         
           - name: ubuntu-latest-clang-10-release
             os: ubuntu-latest
             compiler: clang++-10
             flags: ""
             build_type: Release
-            install-compiler: sudo apt install g++-10 && sudo apt install clang-10
+            install_compiler: sudo apt install g++-10 && sudo apt install clang-10
 
           - name: ubuntu-latest-clang-10-debug-libc++
             os: ubuntu-latest
             compiler: $HOME/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04/bin/clang++
             flags: "-stdlib=libc++"
             build_type: Debug
-            install-compiler: "cd $HOME \
+            install_compiler: "cd $HOME \
               && wget https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz \
               && tar -xvf clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz"
 
@@ -70,15 +71,23 @@ jobs:
             compiler: $HOME/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04/bin/clang++
             flags: "-stdlib=libc++"
             build_type: Release
-            install-compiler: "cd $HOME \
+            install_compiler: "cd $HOME \
               && wget https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz \
               && tar -xvf clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz"
+          
+          - name: windows-2019-cl-debug
+            os: windows-2019
+            compiler: cl
+            flags: ""
+            build_type: Debug
+            install_compiler: ""
+            
     steps:
     - uses: actions/checkout@v2
     
     - name: Configure Build Environment
       shell: bash
-      run: ${{ matrix.install-compiler }}
+      run: ${{ matrix.install_compiler }}
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
