Shortened to if(MSVC) to avoid warnings
Switched to use runner.workspace as working directory


Revert "Switched to use runner.workspace as working directory"

This reverts commit 25b1f0aefeb57f85bf559cb6a3d1081cd9bb066e.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library(conduit INTERFACE)
 option(CONDUIT_Install "Install CMake targets during install step." ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC" )
+if (MSVC)
     target_compile_options(conduit INTERFACE "/std:c++latest" "/await" "/EHsc")
 endif()
 
