--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,13 +36,6 @@ jobs:
             flags: ""
             build_type: Debug
             install_compiler: sudo apt install g++-10
-        
-          - name: ubuntu-latest-clang-10-debug
-            os: ubuntu-latest
-            compiler: clang++-10
-            flags: ""
-            build_type: Debug
-            install_compiler: sudo apt install g++-10 && sudo apt install clang-10
 
           - name: ubuntu-latest-gcc-10-release
             os: ubuntu-latest
@@ -50,13 +43,62 @@ jobs:
             flags: ""
             build_type: Release
             install_compiler: sudo apt install g++-10
-        
+
+          - name: ubuntu-latest-gcc-11-debug
+            os: ubuntu-latest
+            compiler: g++-11
+            flags: ""
+            build_type: Debug
+            install_compiler: sudo apt install g++-11
+
+          - name: ubuntu-latest-gcc-11-release
+            os: ubuntu-latest
+            compiler: g++-11
+            flags: ""
+            build_type: Release
+            install_compiler: sudo apt install g++-11
+
+          - name: ubuntu-latest-clang-10-debug
+            os: ubuntu-latest
+            compiler: clang++-10
+            flags: ""
+            build_type: Debug
+            install_compiler: sudo apt install g++-10 && sudo apt install clang-10
+
           - name: ubuntu-latest-clang-10-release
             os: ubuntu-latest
             compiler: clang++-10
             flags: ""
             build_type: Release
             install_compiler: sudo apt install g++-10 && sudo apt install clang-10
+
+          - name: ubuntu-latest-clang-11-debug
+            os: ubuntu-latest
+            compiler: clang++-11
+            flags: ""
+            build_type: Debug
+            install_compiler: sudo apt install g++-11 && sudo apt install clang-11
+
+          - name: ubuntu-latest-clang-11-release
+            os: ubuntu-latest
+            compiler: clang++-11
+            flags: ""
+            build_type: Release
+            install_compiler: sudo apt install g++-11 && sudo apt install clang-11
+
+          - name: ubuntu-latest-clang-12-debug
+            os: ubuntu-latest
+            compiler: clang++-12
+            flags: ""
+            build_type: Debug
+            install_compiler: sudo apt install g++-11 && sudo apt install clang-12
+
+          - name: ubuntu-latest-clang-12-release
+            os: ubuntu-latest
+            compiler: clang++-12
+            flags: ""
+            build_type: Release
+            install_compiler: sudo apt install g++-11 && sudo apt install clang-12
 
           - name: ubuntu-latest-clang-10-debug-libc++
             os: ubuntu-latest
@@ -92,7 +134,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
+
     - name: Configure Build Environment
       shell: bash
       run: ${{ matrix.install_compiler }}
@@ -101,14 +143,14 @@ jobs:
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
       run: cmake -E make_directory ${{runner.workspace}}/build
-      
+
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
       # access regardless of the host operating system
       shell: bash
       working-directory: ${{runner.workspace}}/build
-      # Note the current convention is to use the -S and -B options here to specify source 
-      # and build directories, but this is only available with CMake 3.13 and higher.  
+      # Note the current convention is to use the -S and -B options here to specify source
+      # and build directories, but this is only available with CMake 3.13 and higher.
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
       run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DCMAKE_CXX_FLAGS=${{ matrix.flags }}
 
@@ -127,6 +169,6 @@ jobs:
     - name: Test
       working-directory: ${{runner.workspace}}/build
       shell: bash
-      # Execute tests defined by the CMake configuration.  
+      # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{ matrix.build_type }}
